
Enhancements:
1. Modified plugin methods for model fields, getters, and setters so that
   the plugin will know which type of class (Primary Key, Base Record, or
   Record with BLOBs) is being generated. 
2. Added methods to IntrospectedTable to get/set attributes.  This 
   allows plugin classes to maintain table based state between
   plugin calls.

-------------------------------------------------------------------------------
Version 1.2.0:  Renamed to Ibator

Bugs:
1. Fixed the JavaTypeResolver so that an unsupported data type can be
   overridden by configuration.
2. Fixed IBATIS-523 - bug in EqualsHashCodePlugin
3. Fixed IBATIS-542 - upgrade build to Ant 1.7.1

Enhancements:
1. Ibator now includes a plugin machanism that you can use to extend or
   modify code generated by Ibator.  In most cases, you should be able
   to write plugins to replace any custom classes that subclass one of
   ibator's built-in generators.  Plugins are now the preferred method for
   extending Ibator and we recommend that you do not extend Ibator's
   built in generators unless absolutely necessary.
2. Major refactoring of Ibator internals.  This has changed
   the interface for overriding any of the supplied Ibator generators.
3. Added support for runtimeCatalog and runtimeSchema properties to the
   table configuration.  Thanks to Dan Turkenkopf for the idea and the
   patch!
4. New method - insertSelective
   
   
Changes:
1. JSE 5.0 or greater is required
2. Changed and centralized classloading - moved the <classPathEntry> from
   the <jdbcConnection> element to <ibatorConfiguration>, removed the
   rootClasspath property from <javaModelGenerator>
3. Changed API on the JavaTypeResolver interface
4. Removed Legacy generator set
5. Removed after generation hook methods in favor of the new ibator
   plugin mechanism.
6. <ibatorContext> elements now require an id

-------------------------------------------------------------------------------
Version 1.1.0:
Bugs - 