@@ -1,4 +1,4 @@
 #Ibator build version info
-#Thu Dec 18 11:42:11 CST 2008
+#Thu Dec 18 16:54:10 CST 2008
 version=1.2.1
-buildNum=673
+buildNum=678
