@@ -53,6 +53,21 @@ here</a>.</p>
            dependancy in this simple plugin.</p></td>
   </tr>
   <tr>
+    <td valign="top"><code>(package).RenameExampleClassPlugin</code></td>
+    <td>This plugin demonstrates usage of the <code>initialized</code> method
+        by renaming the generated example classes generated by Ibator.
+        <p>This plugin accepts two properties:</p>
+        <ul>
+          <li><tt>searchString</tt> (required) a regular expression used to search
+              the default generated name of the example class.</li>
+          <li><tt>replaceString</tt> (required) the string to be inserted on matches of the
+            <tt>searchString</tt>.</li>
+        </ul>
+        <p>For example, to rename the generated example classes from xxxExample to
+           xxxCriteria, specify <tt>Example$</tt> for <tt>searchString</tt>
+           and <tt>Criteria</tt> for <tt>replaceString</tt></p></td>
+  </tr>
+  <tr>
     <td valign="top"><code>(package).SerializablePlugin</code></td>
     <td>This plugin adds the marker interface <code>java.io.Serializable</code> to the
         Java model objects generated by Ibator.  This plugin also adds the
