@@ -31,9 +31,11 @@
   <li>Added methods to IntrospectedTable to get/set attributes.  This
       allows plugin classes to maintain table based state between
       plugin calls.</li>
-  <li>Added <code>attributesCalculated</code> method to the plugin API.  This
+  <li>Added <code>initialized</code> method to the plugin API.  This
       allows plugins to alter some of the fundamental code generation items
       (like the name of a generated class, for example).</li>
+  <li>Added an example plugin to show usage of the <code>initialized</code>
+      method.</li>
 </ul>
 
 <h2>Version 1.2.0</h2>
