@@ -64,8 +64,10 @@ Warning.21=Property {0} exists in root class {1}, but is not of type {2}.  iBATO
 Warning.22=Property {0} exists in root class {1}, but does not have a getter.  iBATOR will generate the property. 
 Warning.23=Property {0} exists in root class {1}, but does not have a setter.  iBATOR will generate the property.
 Warning.24=Plugin {0} in context {1} is invalid and will be ignored.
-Warning.25=The SqlMapConfig plugin requires the targetProject property 
-Warning.26=The SqlMapConfig plugin requires the targetPackage property 
+Warning.25=SqlMapConfigPlugin requires the targetProject property 
+Warning.26=SqlMapConfigPlugin requires the targetPackage property 
+Warning.27=RenameExampleClassPlugin requires the searchString property 
+Warning.28=RenameExampleClassPlugin requires the replaceString property 
 
 Progress.0=Connecting to the Database
 Progress.1=Introspecting table {0}
